Some changes, refactoring and added javadoc.